[gd_scene load_steps=13 format=3 uid="uid://brj66rpg6ncwl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dntd8"]
[ext_resource type="PackedScene" uid="uid://d3d1levv1b7kk" path="res://scenes/player_bullet.tscn" id="2_q5e16"]
[ext_resource type="Texture2D" uid="uid://iycxduwfxn2i" path="res://Tank.png" id="3_sixxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2h325"]
atlas = ExtResource("3_sixxw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o48x"]
atlas = ExtResource("3_sixxw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3klx"]
atlas = ExtResource("3_sixxw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nuqc"]
atlas = ExtResource("3_sixxw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob04i"]
atlas = ExtResource("3_sixxw")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usuxm"]
atlas = ExtResource("3_sixxw")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7w0v"]
atlas = ExtResource("3_sixxw")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d1k8l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h325")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o48x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3klx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nuqc")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob04i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usuxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7w0v")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35wfd"]
size = Vector2(21, 30)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(53, 70)
scale = Vector2(4, 4)
script = ExtResource("1_dntd8")
projectile = ExtResource("2_q5e16")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_d1k8l")
animation = &"Default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -3.8147e-06)
shape = SubResource("RectangleShape2D_35wfd")
debug_color = Color(0, 0.647059, 0.184314, 0.419608)

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(11, 0)

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
